--- a/environment.yaml
+++ b/environment.yaml
@@ -5,9 +5,9 @@ channels:
 dependencies:
   - python==3.9.1
   - ipykernel
-  - numpy
-  - pandas
-  - plotly_express
-  - nbformat
-  - gdal
-  - affine
+  - numpy==1.21.5
+  - pandas==1.4.2
+  - plotly_express==0.4.1
+  - nbformat==5.3.0
+  - gdal==3.4.1
+  - affine==2.3.0
