--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,7 @@ goodwin_creek_1m/*.asc
 goodwin_creek_1m/*.ASC
 goodwin_creek_1m/*.prj
 goodwin_creek_1m/*.PRJ
+goodwin_creek_1m/AgFlow_Reach_Data.csv
 
 *__pycache__
 
