--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "numpy>=1.24.3",
     "pandas>=2.0.2",
     "affine>=2.4.0",
+    "networkx>=3.1",
+    "matplotlib>=3.7.2",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
