--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "affine>=2.4.0",
     "networkx>=3.1",
     "matplotlib>=3.7.2",
+    "scipy>=1.9.3",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
