--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "networkx>=3.1",
     "matplotlib>=3.7.2",
     "scipy>=1.9.3",
+    "tqdm>=4.66.1",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
