--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "matplotlib>=3.7.2",
     "scipy>=1.9.3",
     "tqdm>=4.66.1",
+    "holoviews>=1.17.1",
+    "hvplot>=0.8.4",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
