debugging and processing of UPRB

--- a/.gitignore
+++ b/.gitignore
@@ -170,6 +170,9 @@ cython_debug/
 *.vscode
 
 # data_inputs/goodwin_creek_1m*
+data_inputs/uprb*
+
 data_outputs/goodwin_creek_1m*
 data_outputs/ohio*
 data_outputs/test_3_reaches
+data_outputs/uprb*
